Updated dependency. Switch to nio.